@@ -14,47 +14,47 @@ import java.nio.file.Paths;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Base64;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
-
 import javax.mail.MessagingException;
 import javax.servlet.http.HttpServletResponse;
-
+import javax.xml.bind.DatatypeConverter;
 import org.apache.chemistry.opencmis.client.api.Document;
 import org.apache.chemistry.opencmis.commons.impl.IOUtils;
 import org.apache.chemistry.opencmis.commons.impl.json.JSONObject;
 import org.apache.commons.collections4.CollectionUtils;
 import org.mapstruct.factory.Mappers;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
-import com.fr.adaming.jsfapp.dto.V_ListeCandidatsDto;
-import com.fr.adaming.jsfapp.dto.V_ReportingCandidatDto;
+import com.fr.adaming.jsfapp.dto.CandidatDto;
+import com.fr.adaming.jsfapp.dto.VListeCandidatsDto;
+import com.fr.adaming.jsfapp.dto.VReportingCandidatDto;
 import com.fr.adaming.jsfapp.enums.Disponibilite;
 import com.fr.adaming.jsfapp.enums.Statut;
-import com.fr.adaming.jsfapp.mapper.V_ListeCandidatsMapper;
-import com.fr.adaming.jsfapp.mapper.V_ReportingCandidatMapper;
+import com.fr.adaming.jsfapp.mapper.CandidatMapper;
+import com.fr.adaming.jsfapp.mapper.VListeCandidatsMapper;
+import com.fr.adaming.jsfapp.mapper.VReportingCandidatMapper;
 import com.fr.adaming.jsfapp.model.Candidat;
 import com.fr.adaming.jsfapp.model.Competence;
 import com.fr.adaming.jsfapp.model.Utilisateur;
-import com.fr.adaming.jsfapp.model.V_ListeCandidats;
-import com.fr.adaming.jsfapp.model.V_ReportingCandidat;
+import com.fr.adaming.jsfapp.model.VListeCandidats;
+import com.fr.adaming.jsfapp.model.VReportingCandidat;
 import com.fr.adaming.jsfapp.services.ICandidatService;
 import com.fr.adaming.jsfapp.services.IUtilisateurService;
-import com.fr.adaming.jsfapp.services.IV_ListeCandidatsService;
-import com.fr.adaming.jsfapp.services.IV_ReportingCandidatService;
+import com.fr.adaming.jsfapp.services.IvListeCandidatsService;
+import com.fr.adaming.jsfapp.services.IvReportingCandidatService;
 import com.fr.adaming.jsfapp.services.impl.AlfrescoOpenCmis;
-import com.fr.adaming.jsfapp.utils.Utilitaire;
 import com.fr.adaming.util.ConvocationMail;
 import com.fr.adaming.util.EntretienMail;
 import com.fr.adaming.util.JavaMailApi;
@@ -64,6 +64,11 @@ import com.fr.adaming.util.PieceJointe;
 @RequestMapping(value = "/api/")
 
 public class CandidatController {
+	private static final Logger LOGGER = LoggerFactory.getLogger(CandidatController.class);
+	private static final String VALUE = "value";
+	private static final String NAME = "mounir";
+	private static final String REPORTING = "reporting";
+	private static final String CONTEXT = "context";
 
 	@Autowired
 	private ICandidatService candidatService;
@@ -78,139 +83,145 @@ public class CandidatController {
 
 	private Disponibilite[] refDisponibilite = Disponibilite.values();
 	@Autowired
-	private IV_ListeCandidatsService vListeCandidatsService;
-
-	private V_ListeCandidatsDto vListeCandidatsDto;
-	private V_ListeCandidatsMapper vListeCandidatsMapper = Mappers.getMapper(V_ListeCandidatsMapper.class);
-	private V_ReportingCandidatMapper vReportingCandidatMapper = Mappers.getMapper(V_ReportingCandidatMapper.class);
+	private IvListeCandidatsService vListeCandidatsService;
+	private VListeCandidatsDto vListeCandidatsDto;
+	private VListeCandidatsMapper vListeCandidatsMapper = Mappers.getMapper(VListeCandidatsMapper.class);
+	private VReportingCandidatMapper vReportingCandidatMapper = Mappers.getMapper(VReportingCandidatMapper.class);
+	private CandidatMapper candidatMapper = Mappers.getMapper(CandidatMapper.class);
 
 	@Autowired
-	private IV_ReportingCandidatService vReportingCandidatService;
+	private IvReportingCandidatService vReportingCandidatService;
 
-	@RequestMapping(value = "", method = RequestMethod.GET)
+	@GetMapping(path = "")
 	public Collection<Candidat> all() {
 		return candidatService.findAll();
 	}
-	
-	@RequestMapping(value = "/rechercheNouveauxcandidats", method = RequestMethod.POST)
-	public JSONObject rechercherAjoutNouveauxCandidats(@RequestBody V_ListeCandidatsDto NCD, @RequestParam int page,
-			@RequestParam int size) {
-		List<V_ListeCandidats> list = new ArrayList<>(vListeCandidatsService.rechercherNouveauxCandidats(NCD));
+
+	@PostMapping(path = "/rechercheNouveauxcandidats")
+	public JSONObject rechercherAjoutNouveauxCandidats(@RequestBody VListeCandidatsDto nouveauCandidat,
+			@RequestParam int page, @RequestParam int size) {
+		List<VListeCandidats> list = new ArrayList<>(
+
+				vListeCandidatsService.rechercherNouveauxCandidats(nouveauCandidat));
 		JSONObject object = new JSONObject();
 		object.put("total", list.size());
 		if (size == 0)
-			object.put("results", vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(list));
+			object.put("results", vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(list));
 		else
-			object.put("results", vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(
+			object.put("results", vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(
 					list.subList(page, list.size() < size + page ? list.size() : page + size)));
 		return object;
 	}
 
-	@RequestMapping(value = "/RechercheNouveauxcandidats", method = RequestMethod.POST)
-	public List<V_ListeCandidatsDto> rechercherNouveauxCandidats(@RequestBody V_ListeCandidatsDto NCD,
+	@PostMapping(path = "/RechercheNouveauxcandidats")
+	public List<VListeCandidatsDto> rechercherNouveauxCandidats(@RequestBody VListeCandidatsDto nouveauCandidat,
 			@RequestParam int page, @RequestParam int size) {
+		List<VListeCandidats> list = new ArrayList<>(
+				vListeCandidatsService.rechercherVlisteNouveauxCandidats(nouveauCandidat, page, size));
+		return vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(list);
 
-		List<V_ListeCandidats> list = new ArrayList<>(
-				vListeCandidatsService.rechercherV_ListeNouveauxCandidats(NCD, page, size));
-		return vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(list);
 	}
 
-	@RequestMapping(value = "/RechercheNouveauxcandidatsNbr", method = RequestMethod.POST)
-	public Integer rechercheNouveauxcandidatsNbr(@RequestBody V_ListeCandidatsDto NCD) {
-		return vListeCandidatsService.rechercherV_ListeNouveauxCandidatsNbr(NCD);
+	@PostMapping(path = "/RechercheNouveauxcandidatsNbr")
+	public Integer rechercheNouveauxcandidatsNbr(@RequestBody VListeCandidatsDto nouveauCandidat) {
+		return vListeCandidatsService.rechercherVlisteNouveauxCandidatsNbr(nouveauCandidat);
 	}
 
-	@RequestMapping(value = "/RechercheTouscandidats", method = RequestMethod.POST)
-	public List<V_ListeCandidatsDto> rechercherTousCandidats(@RequestBody V_ListeCandidatsDto NCD,
+	@PostMapping(path = "/RechercheTouscandidats")
+	public List<VListeCandidatsDto> rechercherTousCandidats(@RequestBody VListeCandidatsDto nouveauCandidat,
+
 			@RequestParam int page, @RequestParam int size) {
-
-		List<V_ListeCandidats> list = new ArrayList<>(
-				vListeCandidatsService.rechercherV_ListeCandidats(NCD, page, size));
-		return vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(list);
+		List<VListeCandidats> list = new ArrayList<>(
+				vListeCandidatsService.rechercherVlisteCandidats(nouveauCandidat, page, size));
+		return vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(list);
 
 	}
 
-	@RequestMapping(value = "/RechercheTouscandidatsNbr", method = RequestMethod.POST)
-	public Integer RechercheTouscandidatsNbr(@RequestBody V_ListeCandidatsDto NCD) {
-		return vListeCandidatsService.rechercherV_ListeCandidatsNbr(NCD);
+	@PostMapping(path = "/RechercheTouscandidatsNbr")
+	public Integer rechercheTouscandidatsNbr(@RequestBody VListeCandidatsDto nouveauCandidat) {
+		return vListeCandidatsService.rechercherVlisteCandidatsNbr(nouveauCandidat);
 	}
 
-	@RequestMapping(value = "/RechercheCandidatARelancer", method = RequestMethod.POST)
-	public List<V_ListeCandidatsDto> RechercheCandidatARelancer(@RequestBody V_ListeCandidatsDto NCD,
+	@PostMapping(path = "/RechercheCandidatARelancer")
+	public List<VListeCandidatsDto> rechercheCandidatARelancer(@RequestBody VListeCandidatsDto nouveauCandidat,
 			@RequestParam int page, @RequestParam int size) {
-		List<V_ListeCandidats> list = new ArrayList<>(
-				vListeCandidatsService.rechercherV_ListeCandidatsARelancer(NCD, page, size));
-		return vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(list);
+		List<VListeCandidats> list = new ArrayList<>(
+				vListeCandidatsService.rechercherVlisteCandidatsARelancer(nouveauCandidat, page, size));
+		return vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(list);
+
 	}
 
-	@RequestMapping(value = "/RechercheCandidatARelancerNbr", method = RequestMethod.POST)
-	public Integer RechercheCandidatARelancerNbr(@RequestBody V_ListeCandidatsDto NCD) {
-		return vListeCandidatsService.rechercherV_ListeCandidatsARelancerNbr(NCD);
+	@PostMapping(path = "/RechercheCandidatARelancerNbr")
+	public Integer rechercheCandidatARelancerNbr(@RequestBody VListeCandidatsDto nouveauCandidat) {
+		return vListeCandidatsService.rechercherVlisteCandidatsARelancerNbr(nouveauCandidat);
 	}
 
-	@RequestMapping(value = "/candidatavecentretien/{page}/{size}", method = RequestMethod.GET)
-	public List<V_ListeCandidats> rechercherCandidatAvecEntretien(@PathVariable int page, @PathVariable int size,
+	@PostMapping(path = "/candidatavecentretien/{page}/{size}")
+	public List<VListeCandidats> rechercherCandidatAvecEntretien(@PathVariable int page, @PathVariable int size,
 			Boolean all) {
 		return vListeCandidatsService.rechercherCandidatAvecEntretien(vListeCandidatsDto, page, size, false);
 	}
 
-	@RequestMapping(value = "/RechercheCandidatavecentretien", method = RequestMethod.POST)
-	public List<V_ListeCandidatsDto> findCandidatavecentretien(@RequestBody V_ListeCandidatsDto NCD,
+	@PostMapping(path = "/RechercheCandidatavecentretien")
+
+	public List<VListeCandidatsDto> findCandidatavecentretien(@RequestBody VListeCandidatsDto nouveauCandidat,
 			@RequestParam int page, @RequestParam int size, @RequestParam boolean allValue) {
-		List<V_ListeCandidats> list = new ArrayList<>(
-				vListeCandidatsService.rechercherCandidatAvecEntretien(NCD, page, size, allValue));
-		return vListeCandidatsMapper.v_ListeCandidatsToV_ListeCandidatsDtos(list);
+		List<VListeCandidats> list = new ArrayList<>(
+				vListeCandidatsService.rechercherCandidatAvecEntretien(nouveauCandidat, page, size, allValue));
+		return vListeCandidatsMapper.vListeCandidatsToVListeCandidatsDtos(list);
+
 	}
 
-	@RequestMapping(value = "/RechercheCandidatAvecEntretienNbr", method = RequestMethod.POST)
-	public Integer rechercheCandidatAvecEntretienNbr(@RequestBody V_ListeCandidatsDto NCD,
+	@PostMapping(path = "/RechercheCandidatAvecEntretienNbr")
+	public Integer rechercheCandidatAvecEntretienNbr(@RequestBody VListeCandidatsDto nouveauCandidat,
 			@RequestParam boolean allValue) {
-		return vListeCandidatsService.rechercherCandidatAvecEntretienNbr(NCD, allValue);
+		return vListeCandidatsService.rechercherCandidatAvecEntretienNbr(nouveauCandidat, allValue);
 	}
 
-	@RequestMapping(value = "/RechercheReporting", method = RequestMethod.POST)
-	public List<V_ReportingCandidatDto> rechercherReportingCandidat(@RequestBody V_ReportingCandidatDto NCD,
+	@PostMapping(path = "/RechercheReporting")
+	public List<VReportingCandidatDto> rechercherReportingCandidat(@RequestBody VReportingCandidatDto nouveauCandidat,
 			@RequestParam int page, @RequestParam int size) {
-		List<V_ReportingCandidat> list = new ArrayList<>(
-				vReportingCandidatService.rechercherReportingCandidat(NCD, page, size));
+		List<VReportingCandidat> list = new ArrayList<>(
+				vReportingCandidatService.rechercherReportingCandidat(nouveauCandidat, page, size));
 		return vReportingCandidatMapper.reportingCandidatsToReportingCandidatDtos(list);
 	}
 
-	@RequestMapping(value = "/RechercheReportingNbr", method = RequestMethod.POST)
-	public Integer rechercheReportingNbr(@RequestBody V_ReportingCandidatDto NCD) {
+	@PostMapping(path = "/RechercheReportingNbr")
+	public Integer rechercheReportingNbr(@RequestBody VReportingCandidatDto NCD) {
 		return vReportingCandidatService.rechercherReportingCandidatNbr(NCD);
 	}
 
-	@GetMapping(value = "/getcandidatById/{id}", produces = "application/json")
+	@GetMapping(path = "/getcandidatById/{id}", produces = "application/json")
 	public Candidat findById(@PathVariable Long id) {
 		return candidatService.findById(id);
 	}
 
-	@RequestMapping(value = "/refDisponibilite", method = RequestMethod.GET)
+	@GetMapping(path = "/refDisponibilite")
 	public List<JSONObject> refDisponibilite() {
 		List<JSONObject> result = new ArrayList<>();
 		for (int i = 0; i < refDisponibilite.length; i++) {
 			Disponibilite dis = refDisponibilite[i];
 			JSONObject j = new JSONObject();
 			j.put("label", dis.getLabel());
-			j.put("value", dis);
+			j.put(VALUE, dis);
 			result.add(j);
 		}
 		return result;
 	}
 
-	@RequestMapping(value = "CVPDF", method = RequestMethod.POST)
-	public void getDownload(HttpServletResponse response, @RequestBody V_ListeCandidatsDto NCD) throws IOException {
-		Candidat can = candidatService.findById(NCD.getId());
+	@PostMapping(path = "CVPDF")
+	public void getDownload(HttpServletResponse response, @RequestBody VListeCandidatsDto nouveauCandidat)
+			throws IOException {
+		Candidat can = candidatService.findById(nouveauCandidat.getId());
 		InputStream myStream = AlfrescoOpenCmis.findDocument(can.getIdCv()).getContentStream().getStream();
-		String FileName = AlfrescoOpenCmis.findDocument(can.getIdCv()).getName();
-		response.addHeader("Content-disposition", "attachment;" + FileName);
+		String fileName = AlfrescoOpenCmis.findDocument(can.getIdCv()).getName();
+		response.addHeader("Content-disposition", "attachment;" + fileName);
 		response.setContentType("pdf/plain");
 		IOUtils.copy(myStream, response.getOutputStream());
 		response.flushBuffer();
 	}
 
-	@RequestMapping(value = "/ajoutCandidat", method = RequestMethod.POST)
+	@PostMapping(path = "/ajoutCandidat")
 	public Candidat ajoutCandidat(@RequestBody Candidat entity, @RequestParam String login, @RequestParam String mime) {
 		Candidat candidat = null;
 		if (creerCv(entity, login, mime)) {
@@ -221,8 +232,8 @@ public class CandidatController {
 	}
 
 	private Boolean creerCv(Candidat candidat, String login, String mime) {
-		String realPath = File.separator + "opt" + File.separator + "mounir" + File.separator + "reporting"
-				+ File.separator + login + File.separator;
+		String realPath = File.separator + "opt" + File.separator + NAME + File.separator + REPORTING + File.separator
+				+ login + File.separator;
 		FileInputStream fileInputStream = null;
 		try {
 			fileInputStream = new FileInputStream(realPath
@@ -232,14 +243,14 @@ public class CandidatController {
 			candidat.setIdCv(cvAlfresco.getId());
 			return true;
 		} catch (IOException e) {
-			e.printStackTrace();
+			LOGGER.info(CONTEXT, e);
 			return false;
 		} finally {
 			if (fileInputStream != null)
 				try {
 					fileInputStream.close();
 				} catch (IOException e) {
-					e.printStackTrace();
+					LOGGER.info(CONTEXT, e);
 				}
 		}
 
@@ -255,38 +266,23 @@ public class CandidatController {
 		return "CV " + candidat.getNom() + " " + candidat.getPrenom() + " - " + df.format(new Date()) + extension;
 	}
 
-	@RequestMapping(value = "/updateCandidat", method = RequestMethod.PUT)
-	public Candidat updateCandidat(@RequestBody Candidat entity) {
-		Candidat candidat = candidatService.createOrUpdate(entity);
-		return candidat;
-	}
-	
-
-	@GetMapping("destroyTempoFolder/{loginUser}")
-	public void destroyTempoFolder(@PathVariable String loginUser) {
-		String realPath = File.separator + "opt" + File.separator + "mounir" + File.separator + "reporting"
-				+ File.separator + loginUser;
-		Path path = Paths.get(realPath);
-		if (path != null)
-			Utilitaire.deleteDir(path.toFile());
-		if (Paths.get(File.separator + "opt" + File.separator + "mounir" + File.separator + "reporting")
-				.toFile().list().length == 0) {
-			Utilitaire.deleteDir(new File(File.separator + "opt" + File.separator + "mounir" + File.separator + "reporting"
-					+ File.separator + loginUser));
-		}
-
+	@PutMapping(path = "/updateCandidat")
+	public CandidatDto updateCandidat(@RequestBody CandidatDto candidatDTO) {
+		Candidat candidat = candidatMapper.candidatDtoToCandidat(candidatDTO);
+		candidat = candidatService.createOrUpdate(candidat);
+		return candidatMapper.candidatToCandidatDto(candidat);
 	}
 
-	@RequestMapping(value = "convertWordToPdf", method = RequestMethod.POST)
+	@PostMapping(path = "convertWordToPdf")
 	public JSONObject convertWordToPdf(@RequestBody JSONObject fileJson) {
 		String mime = fileJson.get("filetype").toString();
 		String nameFile = fileJson.get("filename").toString();
-		String value64 = fileJson.get("value").toString();
+		String value64 = fileJson.get(VALUE).toString();
 		String loginUser = fileJson.get("loginUser").toString();
 
-		String realPath = File.separator + "opt" + File.separator + "mounir" + File.separator + "reporting"
-				+ File.separator + loginUser;
-		byte[] data = Base64.getDecoder().decode(value64);
+		String realPath = File.separator + "opt" + File.separator + NAME + File.separator + REPORTING + File.separator
+				+ loginUser;
+		byte[] data = DatatypeConverter.parseBase64Binary(value64);
 		InputStream inStream = new ByteArrayInputStream(data);
 		OutputStream outStream = null;
 		Path path = Paths.get(realPath);
@@ -294,7 +290,7 @@ public class CandidatController {
 			try {
 				Files.createDirectories(path);
 			} catch (IOException e) {
-				e.printStackTrace();
+				LOGGER.info(CONTEXT, e);
 			}
 		}
 
@@ -305,8 +301,9 @@ public class CandidatController {
 			name = nameFile.replace(".docx", ".pdf");
 		} else if (mime.equals("application/octet-stream")) {
 			name = nameFile.replace(".PDF", ".pdf");
-		} else
+		} else {
 			name = nameFile;
+		}
 		try {
 
 			if (mime.equals("application/msword")
@@ -318,10 +315,11 @@ public class CandidatController {
 				doc.save(realPath + File.separator + name);
 			} else {
 				byte[] buffer = new byte[inStream.available()];
-				inStream.read(buffer);
-				File targetFile = new File(realPath + File.separator + name);
-				outStream = new FileOutputStream(targetFile);
-				outStream.write(buffer);
+				while (inStream.read(buffer) > 0) {
+					File targetFile = new File(realPath + File.separator + name);
+					outStream = new FileOutputStream(targetFile);
+					outStream.write(buffer);
+				}
 			}
 
 			File file = new File(realPath + File.separator + name);
@@ -330,12 +328,12 @@ public class CandidatController {
 			inStream.read(imageBytes, 0, imageBytes.length);
 			JSONObject j = new JSONObject();
 			j.put("realPath", realPath + File.separator + name);
-			j.put("value", imageBytes);
+			j.put(VALUE, imageBytes);
 			inStream.close();
 			return j;
 
 		} catch (Exception e) {
-			e.printStackTrace();
+			LOGGER.info(CONTEXT, e);
 			return null;
 		} finally {
 			try {
@@ -344,8 +342,7 @@ public class CandidatController {
 				if (outStream != null)
 					outStream.close();
 			} catch (IOException e1) {
-				e1.printStackTrace();
-				return null;
+				LOGGER.info(CONTEXT, e1);
 			}
 		}
 	}
@@ -354,7 +351,7 @@ public class CandidatController {
 	public Candidat getCandidatByEmail(@PathVariable String email) {
 		return candidatService.rechercherCandidatParEmail(email);
 	}
-	
+
 	@GetMapping("/getCandidatByNumTel/{numTe}")
 	public Candidat getCandidatByNumTel(@PathVariable String numTe) {
 		return candidatService.rechercherCandidatParNumTel(numTe);
@@ -364,21 +361,21 @@ public class CandidatController {
 	public List<String> getListNomCvs() {
 		return candidatService.rechercherNomCv();
 	}
-	@RequestMapping(value = "/updateficheCandidat", method = RequestMethod.PUT)
-	public Candidat updateficheCandidat(@RequestBody Candidat entity) {
-		entity.setStatut(Statut.EN_ATTENTE_EVALUATION);
-		Candidat candidat = candidatService.createOrUpdate(entity);
-		return candidat;
+
+	@PutMapping(path = "/updateficheCandidat")
+	public CandidatDto updateficheCandidat(@RequestBody CandidatDto candidatDTO) {
+		candidatDTO.setStatut(Statut.EN_ATTENTE_EVALUATION);
+		Candidat candidat = candidatService.createOrUpdate(candidatMapper.candidatDtoToCandidat(candidatDTO));
+		return candidatMapper.candidatToCandidatDto(candidat);
 	}
 
-
-
 	@PostMapping("/envoyerEmailHorsCibleCandidats")
-	public void envoyerEmailHorsCibleCandidats(@RequestBody Candidat candidat, @RequestParam String login,
+	public void envoyerEmailHorsCibleCandidats(@RequestBody CandidatDto candidatDto, @RequestParam String login,
 			@RequestParam String comMotif) {
 		JavaMailApi eMailApi = new JavaMailApi();
 		List<String> dst = new ArrayList<>();
 		Utilisateur connectedUser = utilisateurService.findByLogin(login);
+		Candidat candidat = candidatMapper.candidatDtoToCandidat(candidatDto);
 		dst.add(candidat.getCreePar().getEmail());
 		String objet = "Candidat  Hors cible " + candidat.getNom() + " " + candidat.getPrenom();
 		String content = creeContentEmail(candidat, connectedUser, comMotif);
@@ -387,15 +384,15 @@ public class CandidatController {
 		eMailApi.envoyerMail(objet, content, dst, connectedUser.getEmail(), "", "", pjList);
 		eMailApi.setEmailEntretienHorsCible(false);
 	}
-	
-	@RequestMapping(value = "/updateficheEntretien", method = RequestMethod.PUT)
-	public Candidat updateficheEntretien(@RequestBody Candidat entity) {
-		if(entity.getStatut().equals(Statut.EN_ATTENTE_EVALUATION))
-		entity.setStatut(Statut.EN_ATTENTE_AFFECTATION);
-		Candidat candidat = candidatService.createOrUpdate(entity);
-		return candidat;
+
+	@PutMapping(path = "/updateficheEntretien")
+	public CandidatDto updateficheEntretien(@RequestBody CandidatDto candidatDTO) {
+		Candidat candidat = candidatMapper.candidatDtoToCandidat(candidatDTO);
+		if (candidat.getStatut().equals(Statut.EN_ATTENTE_EVALUATION))
+			candidat.setStatut(Statut.EN_ATTENTE_AFFECTATION);
+		candidat = candidatService.createOrUpdate(candidat);
+		return candidatMapper.candidatToCandidatDto(candidat);
 	}
-	
 
 	@PostMapping("/envoyerEmailDispoCandidats")
 	public void envoyerEmailDispoCandidats(@RequestBody EntretienMail entretienMail, @RequestParam String login) {
@@ -410,17 +407,16 @@ public class CandidatController {
 			String content;
 			content = creerEmailEntretien(candidat, connectedUser);
 			List<PieceJointe> pjList = new ArrayList<>();
-			List<JSONObject> files = entretienMail.getPieceJoites();
-			// candidat.setEmailCandidatEnvoyer(true);
+			List<JSONObject> filesConv = entretienMail.getPieceJoites();
 			convocationMail.setEmailEntretien(true);
 			// convert upload file to PieceJointe
 			if (CollectionUtils.isNotEmpty(files)) {
-				for (JSONObject file : files) {
+				for (JSONObject file : filesConv) {
 					if (file != null) {
 						PieceJointe pieceJointe = new PieceJointe();
 						pieceJointe.setFileName(file.get("fileName").toString());
 						ByteArrayOutputStream contentFile = new ByteArrayOutputStream((int) file.get("size"));
-						byte[] data = Base64.getDecoder().decode(file.get("value").toString());
+						byte[] data = DatatypeConverter.parseBase64Binary(file.get(VALUE).toString());
 						contentFile.write(data);
 						pieceJointe.setContent(contentFile);
 						pieceJointe.setMimeType(file.get("type").toString());
@@ -428,15 +424,13 @@ public class CandidatController {
 					}
 				}
 			}
-			System.out.println(pjList);
-//		convocationMail.envoyerMail(objet, content, dst, "drh@adaming.fr",destinataireEnCci,destinataireEnCcitwo, pjList);
-			convocationMail.envoyerMail(objet, content, dst, "moueslati@adaming.fr", dest.get(0), dest.get(1),
-					pjList);
+			LOGGER.info("" + pjList);
+			convocationMail.envoyerMail(objet, content, dst, "moueslati@adaming.fr", dest.get(0), dest.get(1), pjList);
 			convocationMail.setEmailEntretien(false);
 		} catch (IOException e) {
-			e.printStackTrace();
+			LOGGER.info(CONTEXT, e);
 		} catch (MessagingException e) {
-			e.printStackTrace();
+			LOGGER.info(CONTEXT, e);
 		}
 	}
 
